# sdk_challenge

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.py
ROBOT/: README.md  sample.py
ROBOT/GRIPPER_SDK/: .gitignore  README.md
ROBOT/GRIPPER_SDK/example/: example.cpp  example.py
ROBOT/GRIPPER_SDK/include/: zimmergripper.h  zimmergripper.py
ROBOT/ROBOT_SDK/: .gitignore  README.md  pythontest.py
ROBOT/ROBOT_SDK/ketirobotsdk/: robotconf.h  sdk.py  sdkv2.h
VISION/: README.md  requirements.txt  run_server_talos.py  test_vision.py
VISION/APP_Base/APP/: demo_basic.py
VISION/APP_Base/configs/: default.cfg  tis_camera.json
VISION/APP_Base/robot/: keti_zimmer_gripper_jog.py  robot.py
VISION/APP_Calibration/: README.md
VISION/APP_Calibration/data/: cameraMatrix.npy
VISION/docker/: Dockerfile  build_image.sh  build_vision_container.sh  install.sh
VISION/ketisdk/: README.md  image_processing.cfg  server_sensor.py  setup.py  test.py
VISION/ketisdk/configs/: default.cfg  defaults.cfg  grip_net.cfg  server.yaml  ur10.cfg
VISION/ketisdk/ketisdk/: import_basic_utils.py
VISION/ketisdk/samples/: gui_run_tcp_client.py  sensor_run_realsense.py  sensor_run_realsense_client.py  sensor_run_zivid.py  tcp_run_server.py  test.py
VISION/pyconnect/: .gitignore  README.md  setup.py
VISION/pyconnect/pyconnect/: __init__.c  run_client.c  run_client.py  utils.c  utils.py
VISION/pyinterfaces/: README.md  setup.py
VISION/pyinterfaces/pyinterfaces/: __init__.c  grasppose.c  grasppose.py  instances.c  instances.py  utils.c  utils.py
VISION/pyrecognition/: .gitignore  README.md  setup.py
VISION/pyrecognition/configs/: mask_rcnn_R_101_FPN_3x.yaml
VISION/pyrecognition/pyrecognition/: __init__.c  hybrid_grasp.c  hybrid_grasp.py  instance_grasp.c  instance_grasp.py  recognizer.c  recognizer.py  utils.c  utils.py
VISION/tis/: tiscamera.py
VISION/tis/python-common/: TIS.py  TIS_old.py
VISION/tis/samples/: sample_auto_focus.py  sample_extrigger_callback.py  sample_save_img_on_trigger.py  sample_tis_opencv.py
gripper/: keti_zimmer_gripper.py  zimmergripper.cpp  zimmergripper.h  zimmergripper.py
include/gripper/: keti_zimmer_gripper.py  zimmergripper.cpp  zimmergripper.h
include/robot/: robotconf.h  sdk.h
interface/: gripper.py  robot.py  vision.py
keti_example/: CMakeLists.txt  package.xml
keti_example/launch/: calibration.launch  example.launch  pick_and_place.launch
keti_example/scripts/: calibration.py  example.py  pick_and_place.py
keti_example/src/: calibration.cpp  example.cpp  pick_and_place.cpp
keti_gripper/: CMakeLists.txt  package.xml
keti_gripper/action/: GripperMove.action
keti_gripper/launch/: gripper_onrobot.launch
keti_gripper/scripts/: keti_gripper_server.py  keti_onrobot_2fg7.py
keti_msgs/: CMakeLists.txt  package.xml
keti_msgs/msg/: GripperState.msg  RobotState.msg
keti_msgs/srv/: VisionComm.srv
keti_robot/: CMakeLists.txt  package.xml
keti_robot/action/: RobotMove.action
keti_robot/include/: robot_move_action.h  robot_move_sim_action.h
keti_robot/include/robot/: robotconf.h  sdk.h
keti_robot/include/robot/libcustom/: tcpclient.h
keti_robot/include/robot/robotapi/: indy7.h  indy7_v2.h  m1013_v2.h  rb10_v2.h  robot.h  ur10_v2.h
keti_robot/launch/: robot_control.launch  robot_control_sim.launch
keti_robot/src/: robot_control.cpp  robot_control_sim.cpp  robot_move_action.cpp  robot_move_sim_action.cpp
keti_sdk_simulator/keti_robot_control/: CMakeLists.txt
keti_sdk_simulator/keti_robot_control/action/: GripperMove.action  RobotMove.action
keti_sdk_simulator/keti_robot_control/include/: robot_control.h
keti_sdk_simulator/keti_robot_control/launch/: robot_control.launch
keti_sdk_simulator/keti_robot_control/msg/: GripperState.msg
keti_sdk_simulator/keti_robot_control/src/: main.cpp  robot_control.cpp
keti_sdk_simulator/keti_robot_control_gui/: CMakeLists.txt  package.xml
keti_sdk_simulator/keti_robot_control_gui/launch/: robot_control_gui.launch
keti_sdk_simulator/keti_robot_control_gui/src/: main.cpp
keti_sdk_simulator/keti_robot_control_gui/src/MainWindow/: mainwindow.cpp  mainwindow.h
keti_sdk_simulator/keti_robot_control_gui/src/Rviz/: image_view.cpp  image_view.h  rviz.cpp  rviz.h
keti_sdk_simulator/keti_robot_control_gui/ui/: mainwindow.ui
keti_sdk_simulator/keti_robot_description/: CMakeLists.txt  keti_robot.gv  urdf.rviz
keti_sdk_simulator/keti_robot_moveit/: CMakeLists.txt  package.xml
keti_sdk_simulator/keti_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
keti_tcp/: CMakeLists.txt  package.xml
keti_tcp/launch/: tcp_vision.launch
keti_tcp/src/: tcp_vision.cpp
ketirobotsdk/: __init.py__  sdk.h  sdk.py  sdkv2.h
ketirobotsdk/libcustom/: Signal.hpp  tcpclient2.h  timer.h
ketirobotsdk/robotapi/: m1013_v3.h  rb10_v2.h  robot.h  ur10_v2.h
moveit_config_keti/: .setup_assistant  CMakeLists.txt  package.xml
moveit_config_keti/config/: fake_controllers.yaml  joint_limits.yaml  m1013.srdf  ompl_planning.yaml
moveit_config_keti/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
scripts/: example.py  example_gripper.py  example_orientation.py
simulator/keti_robot_control/: CMakeLists.txt  package.xml
simulator/keti_robot_description/: CMakeLists.txt  package.xml
simulator/keti_robot_moveit/: .setup_assistant
simulator/keti_robot_server/: CMakeLists.txt  package.xml
simulator/keti_robot_server/include/: robot_server.h
simulator/keti_robot_server/launch/: robot_server.launch
src/: example.cpp  test.cpp
vision/: comm.py  demo_02_2_Calibration_HowtoUse.py  demo_03_1_Detect_GraspPoints.py  demo_03_2_GraspPoint.py
(+278 files in other folders)
